# hedgeware

./: .gitignore  Cargo.toml  README.md  genesis-state  genesis-state-2000  genesis-state-2023  genesis-state-roc-2026  genesis-wasm  package.json  para-2000-genesis
cli-opt/: Cargo.toml
cli-opt/src/: lib.rs
client/rpc-core/debug/: Cargo.toml
client/rpc-core/debug/src/: lib.rs
client/rpc-core/trace/: Cargo.toml
client/rpc-core/trace/src/: lib.rs
client/rpc-core/txpool/: Cargo.toml
client/rpc/debug/: Cargo.toml
client/rpc/debug/src/: lib.rs
client/rpc/trace/: Cargo.toml
client/rpc/trace/src/: lib.rs
client/rpc/txpool/: Cargo.toml
client/rpc/txpool/src/: lib.rs
debug/: Cargo.toml
evm_tracer/: Cargo.toml
evm_tracer/src/: call_list.rs  raw.rs  util.rs
lockdrop/: Cargo.toml
lockdrop/src/: mainnet_fixtures.rs
pallets/parachain-info/: Cargo.toml
pallets/parachain-info/src/: lib.rs
pallets/ping/: Cargo.toml
pallets/treasury-reward/: Cargo.toml
pallets/treasury-reward/src/: lib.rs  libfuture.rs  libpast.rs  mock.rs  tests.rs
primitives/: Cargo.toml
quaddrop/: Cargo.toml
quaddrop/allocation/: dump.json
quaddrop/src/: distribution.rs  lib.rs
quaddrop/typescript/: package.json  tsconfig.json
quaddrop/typescript/src/: index.ts  migrate.ts
rpc-primitives/debug/: Cargo.toml
rpc-primitives/txpool/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: build_specs.sh  getHedgewareDistribution.js
shell-runtime/: Cargo.toml
src/: chain_spec.rs  cli.rs  command.rs  lib.rs  rpc.rs  service.rs
